syntax = "proto3";

package main;

option go_package = "./proto";

// 添加产品分类
message AddProductCategoryReq {
  string description = 1; //描述
  string icon = 2; //图标
  int64 id = 3; //
  string keywords = 4; //
  int32 level = 5; //分类级别：0->1级；1->2级
  string name = 6; //
  int32 nav_status = 7; //是否显示在导航栏：0->不显示；1->显示
  int64 parent_id = 8; //上机分类的编号：0表示一级分类
  int32 product_count = 9; //
  string product_unit = 10; //
  int32 show_status = 11; //显示状态：0->不显示；1->显示
  int32 sort = 12; //

}

message AddProductCategoryResp {
  string pong = 1;
}

// 删除产品分类
message DeleteProductCategoryReq {
  repeated int64 ids = 1;
}

message DeleteProductCategoryResp {
  string pong = 1;
}

// 更新产品分类
message UpdateProductCategoryReq {
  string description = 1; //描述
  string icon = 2; //图标
  int64 id = 3; //
  string keywords = 4; //
  int32 level = 5; //分类级别：0->1级；1->2级
  string name = 6; //
  int32 nav_status = 7; //是否显示在导航栏：0->不显示；1->显示
  int64 parent_id = 8; //上机分类的编号：0表示一级分类
  int32 product_count = 9; //
  string product_unit = 10; //
  int32 show_status = 11; //显示状态：0->不显示；1->显示
  int32 sort = 12; //

}

message UpdateProductCategoryResp {
  string pong = 1;
}

// 更新产品分类状态
message UpdateProductCategoryStatusReq {
  string description = 1; //描述
  string icon = 2; //图标
  int64 id = 3; //
  string keywords = 4; //
  int32 level = 5; //分类级别：0->1级；1->2级
  string name = 6; //
  int32 nav_status = 7; //是否显示在导航栏：0->不显示；1->显示
  int64 parent_id = 8; //上机分类的编号：0表示一级分类
  int32 product_count = 9; //
  string product_unit = 10; //
  int32 show_status = 11; //显示状态：0->不显示；1->显示
  int32 sort = 12; //

}

message UpdateProductCategoryStatusResp {
  string pong = 1;
}

// 查询产品分类详情
message QueryProductCategoryDetailReq {
    int64 id = 1;
}

message QueryProductCategoryDetailResp {
  string description = 1; //描述
  string icon = 2; //图标
  int64 id = 3; //
  string keywords = 4; //
  int32 level = 5; //分类级别：0->1级；1->2级
  string name = 6; //
  int32 nav_status = 7; //是否显示在导航栏：0->不显示；1->显示
  int64 parent_id = 8; //上机分类的编号：0表示一级分类
  int32 product_count = 9; //
  string product_unit = 10; //
  int32 show_status = 11; //显示状态：0->不显示；1->显示
  int32 sort = 12; //

}

// 分页查询产品分类列表
message QueryProductCategoryListReq {
  string description = 1; //描述
  string icon = 2; //图标
  int64 id = 3; //
  string keywords = 4; //
  int32 level = 5; //分类级别：0->1级；1->2级
  string name = 6; //
  int32 nav_status = 7; //是否显示在导航栏：0->不显示；1->显示
  int64 parent_id = 8; //上机分类的编号：0表示一级分类
  int32 product_count = 9; //
  string product_unit = 10; //
  int32 show_status = 11; //显示状态：0->不显示；1->显示
  int32 sort = 12; //
 int64 page_num = 1; //第几页
  int64 page_size = 2; //每页的数量
}

message ProductCategoryListData {
  string description = 1; //描述
  string icon = 2; //图标
  int64 id = 3; //
  string keywords = 4; //
  int32 level = 5; //分类级别：0->1级；1->2级
  string name = 6; //
  int32 nav_status = 7; //是否显示在导航栏：0->不显示；1->显示
  int64 parent_id = 8; //上机分类的编号：0表示一级分类
  int32 product_count = 9; //
  string product_unit = 10; //
  int32 show_status = 11; //显示状态：0->不显示；1->显示
  int32 sort = 12; //

}

message QueryProductCategoryListResp {
  int64 total = 1;
  repeated  ProductCategoryListData list = 2;
}

// 产品分类
service ProductCategoryService {
  // 添加产品分类
  rpc AddProductCategory(AddProductCategoryReq) returns (AddProductCategoryResp){}
  // 删除产品分类
  rpc DeleteProductCategory(DeleteProductCategoryReq) returns (DeleteProductCategoryResp){}
  // 更新产品分类
  rpc UpdateProductCategory(UpdateProductCategoryReq) returns (UpdateProductCategoryResp ){}
  // 更新产品分类状态
  rpc UpdateProductCategoryStatus(UpdateProductCategoryStatusReq) returns (UpdateProductCategoryStatusResp ){}
  // 查询产品分类详情
   rpc QueryProductCategoryDetail(QueryProductCategoryDetailReq) returns (QueryProductCategoryDetailResp){}
  // 查询产品分类列表
  rpc QueryProductCategoryList(QueryProductCategoryListReq) returns (QueryProductCategoryListResp){}


}
